--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "budo index.js --live --open",
     "build": "node ./scripts/build",
     "testbuild": "budo -d ./build --open",
-    "css-clean": "npx postcss src\\css\\main.css -u autoprefixer --replace && npx postcss src\\css\\main.css -u css-declaration-sorter --replace --no-map"
+    "css-clean": "npx postcss src\\css\\main.css --replace && npx postcss src\\css\\main.css --replace --no-map"
   },
   "repository": {
     "type": "git",
@@ -38,8 +38,7 @@
     "postcss-uncss": "^0.16.1",
     "rimraf": "^2.6.2",
     "uglifycss": "0.0.27",
-    "uglifyify": "^4.0.4",
-    "uncss": "^0.16.2"
+    "uglifyify": "^4.0.4"
   },
   "dependencies": {
     "axios": "^0.18.0",
