--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
     "configurations": [
         {
             "name": "Debug Vue app",
-            "type": "chrome",
+            "type": "firefox",
             "request": "launch",
-            "url": "http://localhost:9966",
-            "webRoot": "${workspaceFolder}\\index.js"
+            "url": "http://localhost:9966/index.html",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
