--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "npm": "^6.4.1",
+    "surge": "^0.21.3",
     "vue": "^2.5.17"
   },
   "browser": {
