--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "uglifyify": "^4.0.4"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "npm": "^6.4.1",
-    "surge": "^0.21.3",
-    "vue": "^2.5.17"
+    "axios": "^0.18.1",
+    "npm": "^6.14.9",
+    "surge": "^0.21.7",
+    "vue": "^2.5.17",
+    "vue-router": "^3.4.9"
   },
   "browser": {
     "vue": "vue/dist/vue.common.js"
