--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "budo index.js --live --open",
+    "start": "budo index.js --pushstate --live --open",
     "build": "node ./scripts/build",
     "testbuild": "budo -d ./build --open",
     "css-clean": "npx postcss src\\css\\main.css --replace && npx postcss src\\css\\main.css --replace --no-map"
