--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "http://akillian.x10host.com/my_portfolio/",
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
+    "autoprefixer": "^8.6.5",
     "budo": "^10.0.4",
     "copy-dir": "^0.3.0",
     "css-declaration-sorter": "^3.0.1",
@@ -35,7 +35,9 @@
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
     "mkdirp": "^0.5.1",
-    "rimraf": "^2.6.2",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.0",
+    "rimraf": "^2.7.1",
     "uglifycss": "0.0.27",
     "uglifyify": "^4.0.4"
   },
@@ -43,7 +45,7 @@
     "axios": "^0.18.1",
     "npm": "^6.14.9",
     "surge": "^0.21.7",
-    "vue": "^2.5.17",
+    "vue": "^2.6.12",
     "vue-router": "^3.4.9"
   },
   "browser": {
